# yanapomny_diplom_bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_QUICK.sh  Dockerfile  FIXES.md  README.md  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  refactoring_plan.md
.github/workflows/: ci.yml
bins/bot/: Cargo.toml
bins/bot/src/: main.rs
bins/scheduler/: Cargo.toml
bins/scheduler/src/: main.rs
bins/webhook/: Cargo.toml
bins/webhook/src/: lib.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs  ports.rs
crates/application/src/use_cases/: channels.rs  mod.rs  payment.rs  referral.rs  reminder.rs  subscription.rs  task.rs  user.rs
crates/application/tests/: architecture.rs  use_cases.rs  user_profile.rs
crates/domain/: Cargo.toml
crates/domain/src/: channels.rs  delivery.rs  error.rs  identity.rs  ids.rs  intent.rs  lib.rs  payments.rs  referral.rs  reminder.rs  scheduling.rs  subscription.rs  task.rs  time.rs  user.rs
crates/domain/tests/: domain.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: clock.rs  id.rs  lib.rs  llm.rs  memory.rs  mongo.rs  redis.rs  twitch.rs  yookassa.rs
crates/infrastructure/tests/: adapters.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: command.rs  event.rs  keyboard.rs  lib.rs  output.rs  payload.rs  renderer.rs  router.rs
crates/presentation/tests/: presentation.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: capabilities.rs  keyboard.rs  lib.rs  text_format.rs  transport.rs
crates/transport-core/tests/: core.rs
crates/transport-vk/: Cargo.toml
crates/transport-vk/src/: event.rs  keyboard.rs  lib.rs  long_poll.rs  sender.rs
crates/transport-vk/tests/: keyboard.rs
docs/: concept.md  cutover_checklist.md  db_schema.md  db_setup.md  env_files_explained.md  rsync_guide.md
scripts/: run_autotest.sh
src/: app.rs  config.rs  lib.rs  main.rs
src/api/: cache.rs  db.rs  llm_client.rs  llm_models.rs  mod.rs  payments.rs  time_calculator.rs
src/bot/: mod.rs  router.rs
src/bot/filters/: mod.rs
src/bot/handlers/: callbacks.rs  channels.rs  commands.rs  mod.rs  pay.rs  profile.rs  referral.rs  reminder.rs  text.rs
src/bot/keyboards/: channels.rs  common.rs  mod.rs  pay.rs  profile.rs  reminder.rs
src/bot/states/: mod.rs
src/scheduler/: channels.rs  mod.rs  subscription.rs
src/transport/: dialogue_store.rs  mod.rs  text_format.rs  traits.rs  vk.rs
src/transport/adapters/: mod.rs
src/utils/: mod.rs  timezone.rs
tests/: scheduler_load_test.rs
