[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/transport-core",
    "crates/transport-vk",
    "crates/presentation",
    "bins/bot",
    "bins/scheduler",
    "bins/webhook",
]

[workspace.package]
edition = "2021"
version = "0.2.0-rc.1"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"

domain = { path = "crates/domain" }
shared = { path = "crates/shared" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
transport-core = { path = "crates/transport-core" }
transport-vk = { path = "crates/transport-vk" }
presentation = { path = "crates/presentation" }
