[package]
name = "application"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application layer: use cases, ports, command/query DTOs."
publish = false

[dependencies]
domain = { workspace = true }
shared = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
