[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure adapters: MongoDB, Redis, YooKassa, LLM HTTP, Twitch, system clock."
publish = false

[dependencies]
application = { workspace = true }
domain = { workspace = true }
shared = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
