[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure adapters: MongoDB, Redis, YooKassa, LLM HTTP, Twitch, system clock."
publish = false

[dependencies]
application = { workspace = true }
domain = { workspace = true }
shared = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime", "bson-chrono-0_4"] }
redis = { version = "0.26", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
