[package]
name = "transport-vk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VK transport adapter."
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
transport-core = { workspace = true }
serde_json = { workspace = true }
vk-bot-api = "1.0"
